--- a/app/src/main/res/layout/activity_boardgame.xml
+++ b/app/src/main/res/layout/activity_boardgame.xml
@@ -6,61 +6,71 @@
     android:layout_height="match_parent"
     tools:context="edu.nyuad.androidgames.boardgame">
 
-    <TextView
-        android:id="@+id/currentPlayerTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="121dp"
-        tools:layout_editor_absoluteY="0dp" />
-
-    <TextView
-        android:id="@+id/winnerPlayerTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="121dp"
-        tools:layout_editor_absoluteY="32dp" />
-
     <ImageView
         android:id="@+id/currentPlayerImageView"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginStart="14dp"
-        app:layout_constraintStart_toEndOf="@+id/currentPlayerTextView"
-        app:srcCompat="@drawable/rounded_button_grey"
-        tools:layout_editor_absoluteY="0dp" />
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="8dp"
+        android:contentDescription="@string/emptyChip"
+        app:layout_constraintEnd_toStartOf="@+id/textView4"
+        app:layout_constraintStart_toEndOf="@+id/textView3"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/rounded_button_grey" />
 
-    <GridView
-        android:id="@+id/boardGridView"
-        android:layout_width="match_parent"
-        android:layout_height="538dp"
-        tools:layout_editor_absoluteY="65dp" />
+    <ImageView
+        android:id="@+id/winnerPlayerImageView"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:contentDescription="@string/emptyChip"
+        app:layout_constraintStart_toEndOf="@+id/textView4"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/rounded_button_grey" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:text="Current Player:"
+        android:layout_height="18dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="24dp"
+        android:text="@string/currentPlayer"
         android:textAlignment="textEnd"
-        app:layout_constraintEnd_toStartOf="@+id/currentPlayerTextView"
+        app:layout_constraintEnd_toStartOf="@+id/currentPlayerImageView"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="0dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="@string/currentPlayer" />
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="90dp"
-        android:layout_height="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="24dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:text="Winner:"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="24dp"
+        android:text="@string/winnerPlayer"
         android:textAlignment="textEnd"
-        app:layout_constraintEnd_toStartOf="@+id/winnerPlayerTextView"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="32dp" />
+        app:layout_constraintEnd_toStartOf="@+id/winnerPlayerImageView"
+        app:layout_constraintStart_toEndOf="@+id/currentPlayerImageView"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="@string/winnerPlayer" />
+
+    <GridView
+        android:id="@+id/boardGridView"
+        android:layout_width="400dp"
+        android:layout_height="520dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/exitButton"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:text="@string/exitFromBoardGame"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="@string/exitFromBoardGame" />
 
 </android.support.constraint.ConstraintLayout>
