--- a/app/src/main/res/layout/activity_boardgame.xml
+++ b/app/src/main/res/layout/activity_boardgame.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="edu.nyuad.androidgames.boardGameActivity">
+    tools:context="edu.nyuad.androidgames.BoardGameActivity">
 
     <ImageView
         android:id="@+id/currentPlayerImageView"
