--- a/app/src/main/res/drawable/rounded_button_grey.xml
+++ b/app/src/main/res/drawable/rounded_button_grey.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
 android:shape="rectangle">
 <!--<solid android:color="#cfd8dc" />-->
-<solid android:color="#9e9e9e" />
+<solid android:color="#b5cfd8dc" />
 <corners android:radius="8000dp"/>
 </shape>
