--- a/app/src/main/res/drawable/rounded_button_red.xml
+++ b/app/src/main/res/drawable/rounded_button_red.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
 android:shape="rectangle">
-<solid android:color="#e91e63" />
+<solid android:color="#c5e2165c" />
 <corners android:radius="8000dp"/>
 </shape>
